Initialized form lib

--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,9 @@
     "form-documentation-e2e": {
       "tags": [],
       "implicitDependencies": ["form-documentation"]
+    },
+    "form": {
+      "tags": []
     }
   }
 }
