--- a/package.json
+++ b/package.json
@@ -27,46 +27,48 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/core": "10.0.27",
+    "@emotion/styled": "10.0.27",
     "document-register-element": "1.13.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "@emotion/styled": "10.0.27",
-    "@emotion/core": "10.0.27"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.4.5",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.4",
-    "@nrwl/react": "9.4.5",
-    "@nrwl/jest": "9.4.5",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
+    "@emotion/babel-preset-css-prop": "10.0.27",
     "@nrwl/cypress": "9.4.5",
+    "@nrwl/eslint-plugin-nx": "9.4.5",
+    "@nrwl/jest": "9.4.5",
+    "@nrwl/react": "9.4.5",
     "@nrwl/web": "9.4.5",
+    "@nrwl/workspace": "9.4.5",
+    "@testing-library/dom": "^7.18.0",
+    "@testing-library/react": "^10.4.2",
+    "@testing-library/user-event": "^12.0.8",
+    "@types/jest": "25.1.4",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
-    "@testing-library/react": "10.0.4",
-    "@nrwl/eslint-plugin-nx": "9.4.5",
-    "@typescript-eslint/parser": "2.19.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "babel-jest": "25.1.0",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.2",
-    "eslint-plugin-cypress": "^2.10.3",
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-typescript": "7.9.0",
-    "@babel/preset-react": "7.9.4",
-    "babel-jest": "25.1.0",
-    "@emotion/babel-preset-css-prop": "10.0.27"
+    "jest": "25.2.3",
+    "prettier": "2.0.4",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.8.3"
   }
 }
