--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@emotion/styled": "10.0.27",
     "document-register-element": "1.13.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-select": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -52,6 +53,7 @@
     "@types/node": "~8.9.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
+    "@types/react-select": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
     "babel-jest": "25.1.0",
