--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
     "document-register-element": "1.13.1",
-    "lodash.isequal": "^4.5.0",
+    "lodash": "^4.17.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-select": "^3.1.0",
@@ -52,7 +52,7 @@
     "@testing-library/react": "^10.4.2",
     "@testing-library/user-event": "^12.0.8",
     "@types/jest": "25.1.4",
-    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash": "^4.14.157",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
