--- a/libs/form/package.json
+++ b/libs/form/package.json
@@ -1,4 +1,25 @@
 {
   "name": "@excellent-react/form",
-  "version": "0.0.1"
+  "description": "Excellent hook to React form state and validation.",
+  "version": "0.0.1",
+  "homepage": "https://github.com/excellent-react/form",
+  "author": "Alfredo Perez (https://github.com/panchaldeep009)",
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "forms",
+    "useForm",
+    "hook",
+    "excellent-react"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/excellent-react/form.git"
+  },
+  "bugs": {
+    "url": "https://github.com/excellent-react/form/issues"
+  },
+  "peerDependencies": {
+    "react": "^16.8.x"
+  }
 }
