--- a/libs/form/package.json
+++ b/libs/form/package.json
@@ -3,7 +3,7 @@
   "description": "Excellent hook to React form state and validation.",
   "version": "0.0.1",
   "homepage": "https://github.com/excellent-react/form",
-  "author": "Alfredo Perez (https://github.com/panchaldeep009)",
+  "author": "Deep Panchal (https://github.com/panchaldeep009)",
   "license": "MIT",
   "keywords": [
     "react",
@@ -18,6 +18,9 @@
   },
   "bugs": {
     "url": "https://github.com/excellent-react/form/issues"
+  },
+  "dependencies": {
+    "lodash": "4.17.15"
   },
   "peerDependencies": {
     "react": "^16.8.x"
