--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@excellent-react/form": ["libs/form/src/index.ts"]
+      "@excellent-react/form": ["./libs/form/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
