--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "10.0.27",
     "document-register-element": "1.13.1",
     "lodash": "^4.17.15",
+    "markdown-to-jsx": "^7.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-select": "^3.1.0",
