--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,18 +13,26 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
+        
       - name: Install dependencies
         run: yarn
+        
       - name: Test
         run: yarn test form
+        
       - name: Build
         run: yarn build form
-      - name: Version Bump
-        uses: rimonhanna/gh-action-bump-version@master
-        env:
-          PACKAGEJSON_DIR: dist/libs/form
-      - name: Publish to npm
-        uses: JS-DevTools/npm-publish@v1
+        
+      - name: Bump, tag and release
+        id: bump
+        uses: rymndhng/release-on-push-action@master
         with:
-          token: ${{ secrets.NPM_TOKEN }}
-          package: ./dist/libs/form/package.json
+          bump_version_scheme: norelease
+        
+      - name: Version Bump
+        run: cd dist/libs/form && yarn version --new-version "${steps.bump.outputs.version}" --no-git-tag-version
+
+      - name: Publish
+        run: yarn publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
